--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>💜 King's Jungle</title>
+  <title>Kehinde's Resume</title>
 </head>
 
 <body>
@@ -12,19 +12,71 @@
       <td><img src="headshot1.png" alt="king's profile picture"></td>
       <td>
         <h1>Kehinde Durodola-Tunde</h1>
-        <p><em>Product and Partnership, <strong>MyCompany</strong></em></p>
-        <p>I love building products;
-          I care about my customers; and<br>
-          I work judiciously well with my stakeholders to execute the vision.<br>
-          I love reading non-fiction books and sometimes I watch movies.<br>
-          I look forward to traveling the world with you. </p>
+        United Kingdom, <a href="kehindedurodola@yahoo.com">kehindedurodola@yahoo.com</a>,
+        <a href="https://www.linkedin.com/in/kennyking-dt/">LinkedIn</a>
+
+        <br>
+        <h2><strong>PROFILE</strong> <br></h2>
+        <p>I am a Product Manager experienced in building quality relationships <br>
+        (with internal and external stakeholders) while ensuring that project <br>
+        goals and objectives are met. <br>
+        <br>
+        I have demonstrated rapid comprehension and ability to survive in a <br>
+        fast-paced agile environment.</p>
+
       </td>
     </tr>
   </table>
 
   <hr size='3' noshade>
 
-  <h3>Education</h3>
+  <h3>PROFESSIONAL EXPEREIENCE</h3>
+  <table cellspacing='20'>
+    <tr>
+      <td> <strong>12/2021 - Present</strong> </td>
+      <td> <strong>TridePay</strong> </td>
+    </tr>
+    </table>
+    <strong>Product/Partnership Manager</strong>
+    <ul>
+      <li>Developed the product requirement documents, wireframes, product roadmap, business plan, and business model canvas.</li>
+      <li>Developed product vision and strategy, as well as ensuring that internal stakeholders are aligned with the product's vision.</li>
+      <li>Led cross-functional meetings with internal teams as well as external stakeholders such as Railsbank and Truelayer, among others.</li>
+    </ul>
+  <hr>
+  <table cellspacing='20'>
+    <tr>
+      <td> <strong>11/2021 - 04/2022</strong> </td>
+      <td><a href="https://www.hubpay.ae/"> <strong>Hubpay</strong> </a></td>
+    </tr>
+    </table>
+    <strong>Product/Data Science Intern</strong>
+    <ul>
+      <li>Identified and recommended areas of improvement with the product and data capturing.</li>
+      <li>Led data source investigation for the development of the performance dashboard.</li>
+      <li>Providing technical support for customer experience team with regards to data.</li>
+    </ul>
+  <hr>
+    <table cellspacing='20'>
+      <tr>
+        <td> <strong>03/2021 - 09/2021</strong> </td>
+        <td><a href="https://credpal.com/"> <strong>CredPal</strong> </a></td>
+      </tr>
+      </table>
+      <strong>Product Manager</strong>
+      <ul>
+        <li>Developed a deep understanding of the business objectives of internal and external stakeholders; evangelized the product <br>
+          vision and built trust by maintaining an accurate and achievable roadmap.</li>
+        <li>Improved user retention by 80% by removing bottlenecks during user onboarding; helping us increase user ratings from <br>
+          3 stars to 4 +stars on google play store.</li>
+        <li>Increased company’s liquidity by 40% by deploying a loan product integration with the investors Improved over <br>
+          50,000 customers’ access to credit financing by deploying a marketplace in the application.</li>
+      </ul>
+
+  <hr size='3' noshade>
+
+
+  <h3>EDUCATION</h3>
   <ul>
     <li><strong><a href="https://www.bradford.ac.uk/external/">University of Bradford</a></strong> MSc. Applied Artificial Intelligence and Data Analytics <br>
       September 2021 - Decemeber 2022 <br>
@@ -42,35 +94,7 @@
 
   <hr size='3' noshade>
 
-  <h3>Work Experience</h3>
-  <table cellspacing='10'>
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Job Description</th>
-        <th>Company</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Nov. 2021 - Apr. 2022</td>
-        <td>Product/Data Intern</td>
-        <td>Hubpay</td>
-      </tr>
-      <tr>
-        <td>Mar. 2021 - Sep. 2021</td>
-        <td>Product Manager</td>
-        <td>CredPal</td>
-      </tr>
-    </tbody>
-    <tfoot>
-
-    </tfoot>
-  </table>
-
-  <hr size='3' noshade>
-
-  <h3>Skills</h3>
+  <h3>SKILLS</h3>
   <table>
     <tr>
       <td>
@@ -100,7 +124,9 @@
   </table>
   </table>
 
-  <h3>Hobbies</h3>
+<hr size='3' noshade>
+
+  <h3>HOBBIES</h3>
   <ol type='i'>
     <li>Reading non-fiction books.</li>
     <li>Shooting. My first experience was amazing.</li>
